agregando mensajes de error

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     <div>
-        <input type="text" id="idClima" placeholder="escribir...">
-        <input type="button" name="elegir" value="Enviar" onclick="recibir();">
+        <!-- <input type="text" id="idClima" placeholder="escribir..."> -->
+        <input type="button" name="elegir" value="INICIAR" onclick="start();">
 <!-- con este codigo puedo enviar un vaalor d eun input o combobox y guardarlo en una variable de JS -->
             <!-- <select name="elegir" id="id-color" onchange="recibir();">
                 <option> </option>
